fixed styling issue on mobile - slideshow wider than screen width

--- a/style.css
+++ b/style.css
@@ -283,5 +283,6 @@ canvas {
 
   .about-flex {
     width: 100%;
+    min-width: 10em;
   }
 }
